# FoA-P-2-Semester-

./: .gitignore
LabWork_1/Task_1/: CMakeLists.txt  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rocket.cpp  rocket.h
LabWork_1/Task_2/: CMakeLists.txt  ellipse.cpp  ellipse.h  figure.cpp  figure.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paint.cpp  paint.h  paintscene.cpp  paintscene.h  parallelogram.cpp  parallelogram.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  romb.cpp  romb.h  star.cpp  star.h  triangle.cpp  triangle.h
LabWork_2/Task_1/: CMakeLists.txt  date.cpp  date.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math.cpp  math.h  resources.qrc  Ответы.txt
LabWork_2/Task_2/: CMakeLists.txt  filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  order.cpp  order.h  ordermanager.cpp  ordermanager.h  orders.txt  searchwindow.cpp  searchwindow.h  searchwindow.ui  utils.h
LabWork_3/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  solution.cpp  solution.h
LabWork_3/Task_2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  solution.cpp  solution.h
LabWork_3/Task_3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  solution.cpp  solution.h
LabWork_3/Task_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  solution.cpp  solution.h
LabWork_3/Task_5/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  solution.cpp  solution.h
LabWork_4/Task_1/: CMakeLists.txt  (+12 more)
QSS/: Combinear.qss  Geoo.qss
(+76 files in other folders)
